<resources>
    <string name="app_name">My Frist Application Android</string>
    <string name="press_me">Press Me</string>
    <string name="hello_users">Hello Users!</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in_btn">Log In</string>
    <string name="register_btn">Register</string>
    <string name="name">Name</string>
</resources>